# CheesePie

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README-truenas.md  README.md  app.py  compose.yaml  config.example.json  config.json  config.mac.json  docker-compose.base.yml  docker-compose.truenas.yml  docker-compose.yml  example.list  nul  object-format.xml  preproc.schema.json  requirements.txt  run.sh  short.list  start.bat  start.sh  startup.bat
.claude/: settings.local.json
cheesepie/: __init__.py  analyze.py  annotations.py  applog.py  auth.py  browser.py  calibration.py  config.py  filters.py  importer.py  matlab.py  media.py  pages.py  pathguard.py  preproc.py  segment.py  tasks.py  track.py  version.py
desktop/desktop/: README.md  package.json
desktop/desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/desktop/src-tauri/src/: main.rs
matlab/: load_tracking_obj.m  simpleSegment.py
matlab_old/: Segment.m  pieImport.m  segment_frame.m  simpleSegment.dylib
scripts/: entrypoint.sh  fake_track.py  install_codex_tools.sh  setup_matlab_engine.sh  start.ps1
static/: annotator.css  annotator.js  app.js  browser.css  calibration.css  calibration.js  importer.css  importer.js  preproc.css  preview.js  settings.css  shortcuts.js  styles.css  tasks.js
static/preproc/: arena.js  background.js  colors.js  filters.js  main.js  (+4 more)
templates/: analyze.html  annotator.html  base.html  browser.html  calibration.html  importer.html  login.html  placeholder.html  preproc.html  preview.html  settings.html  setup.html  tasks.html
working/: tasks.json
(+3 files in other folders)
