[package]
name = "cheesepie-tracker-preview"
version = "0.1.0"
description = "Cross-platform preview app for CheesePie tracking data"
authors = ["CheesePie"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["api-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
